--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   
  
   <!-- inicio carrusel  -->
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -106,9 +106,9 @@
         <img src="imagen/1.3.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
+    <a class="carousel-control-prev " href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon " aria-hidden="true"></span>
+      <span class="sr-only ">Previous</span>
     </a>
     <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -119,7 +119,8 @@
   <div class="container  ">    
     <div class="row justify-content-center">
       <div class="text-center">
-        <h3 class="">Encontratás los mejores juegos.</h3>
+       <br>
+        <h3 class="">Encontrarás los mejores juegos.</h3>
         <p class="lead">¿Buscas una aventura increíble para jugar hoy mismo?  </p>
         <p class="lead">Compra aquí tus juegos</p>
       </div>
@@ -148,12 +149,13 @@
             </div>
             <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 py-4  ">
               <img src="imagen/juegos/P4_2.jpg" class="img-fluid " alt="">
-              <h5 class="mt-3">Zelda breath of the wild</h5>
+              <h5 class="mt-3">Fifa 21</h5>
               <p class="lead">$52.990</p>               
             </div>
             <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 py-4  ">
               <img src="imagen/juegos/P4_3.jpg" class="img-fluid " alt="">
-              <h5 class="mt-3">Marvel’s Avengers PS4</h5>
+              <h5 class="mt-3">Marvel’s Avengers</h5>
+              <h5>PS4</h5>
               <p class="lead">$32.990</p>               
             </div>
           </div>
@@ -168,7 +170,7 @@
             </div>
             <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 py-4  ">
               <img src="imagen/juegos/Sw_2.jpg " class="img-fluid " alt="">
-              <h5 class="mt-3">Marvel’s Avengers PS4</h5>
+              <h5 class="mt-3">Zelda breath of the wild</h5>
               <p class="lead">$49.990</p>                
             </div>
             <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 py-4  ">
