--- a/juegos.html
+++ b/juegos.html
@@ -136,7 +136,7 @@
 
 
     <div class="container">
-        <div class="row justify-content-around m-2  ">
+        <div class="row justify-content-around m-2">
 
             <!-- PCPCPCPCPCPCPCPCPCPCPCPCPCPCPC -->
             <div class=" filterDiv pc  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
@@ -144,6 +144,7 @@
                     <img src="imagen/juegos/pc_1.jpeg" class="icarta img-fluid" alt="">
                     <h5 class="">Grand Theft Auto V</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
                 </div>
             </div>
             <div class="filterDiv pc  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
@@ -151,6 +152,7 @@
                     <img src="imagen/juegos/pc_2.jpg" class="icarta  img-fluid " alt="">
                     <h5 class="">The Elder Scrolls V: Skyrim</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
                 </div>
             </div>
 
@@ -159,6 +161,7 @@
                     <img src="imagen/juegos/pc_3.jpeg" class="icarta  img-fluid " alt="">
                     <h5 class="">My Friend Pedro</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
                 </div>
             </div>
             <div class="filterDiv pc  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
@@ -166,6 +169,7 @@
                     <img src="imagen/juegos/pc_4.jpeg" class="icarta img-fluid " alt="">
                     <h5 class="">Batman: Arkham Collection</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
                 </div>
             </div>
             <div class="filterDiv pc  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
@@ -173,6 +177,7 @@
                     <img src="imagen/juegos/pc_5.jpg" class="icarta img-fluid " alt="">
                     <h5 class="">Dark Souls 3</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
                 </div>
             </div>
             <div class="filterDiv pc  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
@@ -180,6 +185,7 @@
                     <img src="imagen/juegos/pc_6.jpg" class="icarta img-fluid " alt="">
                     <h5 class="">Dragon Ball FighterZ (Ultimate Edition)</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
                 </div>
             </div>
             <!-- PCPCPCPCPCPCPCPCPCPCPCPCPCPCPC -->
@@ -190,6 +196,7 @@
                     <img src="imagen/juegos/P4_1.jpg" class="icarta img-fluid " alt="">
                     <h5 class="">NBA 2K21</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
                 </div>
             </div>
 
@@ -198,6 +205,7 @@
                     <img src="imagen/juegos/P4_2.jpg" class="icarta img-fluid " alt="">
                     <h5 class="">Fifa 21</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
                 </div>
             </div>
 
@@ -206,6 +214,7 @@
                     <img src="imagen/juegos/P4_3.jpg" class="icarta img-fluid " alt="">
                     <h5 class="">Marvel’s Avengers</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
                 </div>
             </div>
             <div class="filterDiv ps4  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
@@ -213,6 +222,7 @@
                     <img src="imagen/juegos/P4_4.jpg" class="icarta img-fluid " alt="">
                     <h5 class="">Dragon Ball: Kakarot</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
                 </div>
             </div>
             <!-- P4P4P4P4P4P4P4P4PP4P4P4P4P4P4P4P -->
@@ -224,6 +234,7 @@
                     <img src="imagen/juegos/Sw_1.jpg" class="icarta img-fluid " alt="">
                     <h5 class="">Minecraft Dungeons: Hero Edition</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
                 </div>
             </div>
             <div class="filterDiv sw  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
@@ -231,6 +242,7 @@
                     <img src="imagen/juegos/Sw_2.jpg" class="icarta img-fluid " alt="">
                     <h5 class="">Zelda breath of the wild</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
                 </div>
             </div>
             <div class="filterDiv sw  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
@@ -238,6 +250,7 @@
                     <img src="imagen/juegos/Sw_3.jpg" class="icarta img-fluid " alt="">
                     <h5 class="">Super Mario 3D All-Stars NSW</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
                 </div>
             </div>
             <!-- SWSWSWSWSWSWSWWSWSWSWSWSWSWSWSWSW -->
@@ -248,6 +261,7 @@
                     <img src="imagen/juegos/xb_1.jpeg" class="icarta img-fluid " alt="">
                     <h5 class="">Borderlands (GOTY)</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
                 </div>
             </div>
             <div class="filterDiv xb  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
@@ -255,6 +269,7 @@
                     <img src="imagen/juegos/xb_2.jpeg" class="icarta img-fluid " alt="">
                     <h5 class="">Gears of War 3</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
                 </div>
             </div>
 
